# JP_MORGAN_SCREENING_TASK

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: rag_results_20251226_162927.json  rag_results_20251226_162927.md
src/: __init__.py  graph.py  ingest.py  main.py  run_questions.py
tests/: test_retrieving.py
